--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ea voluptas tempore quae rerum, qui fuga quod laudantium. Dolorem sint et modi minima nostrum iste magnam necessitatibus quod ab optio.</p>
     <p>Teste Branch</p>
+
+    <footer>2020</footer>
 </body>
 </html>
