--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <p>Teste das funcionalidas do GIT.</p>
     <p>Teste Branch</p>
-    <h2>Teste</h2>
+    <h2>Teste 2 </h2>
     <footer>2020</footer>
 
 
